--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,10 @@
 ---
-title: "My Website"
 ---
 
-Hello, Website!
+<link rel="stylesheet" href="styles.css" type="text/css">
+
+<img src="images/caleb.png" style="width:30%;  margin-right: 20px" align="left">
+
+I am a first year PhD student in Operations Management at Harvard University (GSAS and Business School). My research interests are in supply chains and applied econometrics. Prior to Harvard, I was a research assistant at the Kellogg School of Management in Finance and Econometrics. 
+
+You can find my CV/Resume [here](https://www.dropbox.com/s/efdu25rwgm3us4f/res4.pdf?raw=1).
