--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,9 @@
 ---
 title: "&nbsp;"
+output: 
+    html_document:
+         css: styles.css
+
 ---
 
 <link rel="stylesheet" href="styles.css" type="text/css">
