--- a/research.Rmd
+++ b/research.Rmd
@@ -1,5 +1,8 @@
 ---
 title: "&nbsp;"
+output: 
+    html_document:
+         css: styles.css
 ---
 
 <link rel="stylesheet" href="styles.css" type="text/css">
