--- a/codes.Rmd
+++ b/codes.Rmd
@@ -9,6 +9,16 @@ output:
         collapsed: false
         smooth_scroll: false
 ---
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165847699-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165847699-1');
+</script>
+
 
 <link rel="stylesheet" href="styles.css" type="text/css">
 
