--- a/index.Rmd
+++ b/index.Rmd
@@ -13,6 +13,17 @@ output:
 <!--    }); -->
 <!-- </script> -->
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165847699-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165847699-1');
+</script>
+
+
 
 
 <div style="margin-bottom:25px;">
