--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -5,6 +5,17 @@ output:
          css: styles.css
 ---
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165847699-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165847699-1');
+</script>
+
+
 <link rel="stylesheet" href="styles.css" type="text/css">
 
 ### Harvard University -- Harvard Business School
