--- a/codes.Rmd
+++ b/codes.Rmd
@@ -22,9 +22,11 @@ output:
 
 <link rel="stylesheet" href="styles.css" type="text/css">
 
-I'm a huge fan of R. To share my enthusiasm, I've provided some code for procedures commonly used in empirical analysis in Operations Management and Economics. The code is mostly self-contained, but requires a basic understanding of `data.table` and piping `%>%`. 
+Here is some code for procedures commonly used in empirical analysis in Operations Management and Economics. The code is mostly self-contained, but requires a basic understanding of `data.table` and piping `%>%`. 
 
-The code should be fast (due to `data.table` and other user contributed packages and not me). But the primary focus was on readability, there are probably much faster alternatives to the codes I present below. Please email me if you spot any errors or have any questions or suggestions! I also take requests, so please email me if you think that there are commonly used routines that I've missed. 
+The code should be fast (due to `data.table` and other user contributed packages and not me). But because my primary focus was (and is) to write code that I can easily read months later, there are probably much better alternatives. 
+
+Please email me if you spot any errors or have any questions or suggestions! I also take requests, so please email me if you think that there are commonly used routines that I've missed. 
 
 ```{r echo=FALSE, message=FALSE}
 library(pacman)
