--- a/index.Rmd
+++ b/index.Rmd
@@ -36,6 +36,10 @@ output:
 # Caleb Kwon 
 
 
-I am a PhD student in Operations Management at Harvard University. My research interests are in supply chains and applied econometrics. Prior to Harvard, I was a research assistant at the Kellogg School of Management in Finance and Econometrics. And before that, I was an undergraduate student in Economics at Simon Fraser University. 
+I am a rising second year PhD student in Operations Management at Harvard University. My research interests are in supply chains and applied econometrics. Prior to Harvard, I was a research assistant at the Kellogg School of Management in Finance and Econometrics. And before that, I was an undergraduate student in Economics at Simon Fraser University. 
 
 You can find my CV/Resume [here](https://www.dropbox.com/s/efdu25rwgm3us4f/res4.pdf?raw=1).
+
+## New:
+
+- A new version of _Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models_ has been uploaded in the Research Tab. Please also see the accompanying guide on how to easily implement our procedure. 
