--- a/research.Rmd
+++ b/research.Rmd
@@ -21,6 +21,8 @@ output:
 1. [Supply Chain Disruptions and Causal Outcomes: Evidence from the Bankruptcy of Hanjin Shipping (2018) ](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272).
   - _Reject and Resubmit_ 
 
-2. [Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2019)](https://www.dropbox.com/s/8362vg2cn57sgld/Estimation-of-the-number-of-mixture-components.pdf?raw=1). [With Eric Mbakop]
-  - _Revise and Resubmit_,  **The Annals of Statistics** 
+2. [Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)](https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0). [With Eric Mbakop]
+  - _Revised and Resubmitted_,  **The Annals of Statistics** 
+  - [Link to Practicioner's Guide](https://www.dropbox.com/s/362zmzjb0uybr57/Online_Algorithm.pdf?dl=0): 
+  
 3. Supply Chain Spillovers in Corporate Social Responsibility Investments (2020) [With Jun Li and Andrew Wu]
