--- a/research.Rmd
+++ b/research.Rmd
@@ -22,6 +22,6 @@ output:
   - _Reject and Resubmit_ 
 
 2. [Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)](https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0). [With Eric Mbakop]
-  - _Accepted at_ **The Annals of Statistics** 
+  - _Revised and Resubmitted_,  **The Annals of Statistics** 
   
 3. Supply Chain Spillovers in Corporate Social Responsibility Investments (2020) [With Jun Li and Andrew Wu]
