--- a/research.Rmd
+++ b/research.Rmd
@@ -30,3 +30,5 @@ output:
 3. Supply Chain Spillovers in Corporate Social Responsibility Investments (2020) [With Jun Li and Andrew Wu]
 
       *Draft coming soon*
+      
+4. On the Dynamics of Retail Labor Productivity (2020) [With Ananth Raman] 
