--- a/index.Rmd
+++ b/index.Rmd
@@ -29,7 +29,7 @@ output:
 <div style="margin-bottom:25px;">
 </div>
 
-<img src="images/caleb_1.jpg" height = "350" style ="display:block; margin-left: auto; margin-right:auto;">
+<img src="images/caleb_new.png" height = "350" style ="display:block; margin-left: auto; margin-right:auto;">
 
 <style type="text/css">
     /* default styles here for older browsers. 
@@ -76,5 +76,5 @@ I am a second year PhD student in Operations Management at Harvard University. M
 ## Some Recent Updates
 
   - [Teaching evaluations for HBS Course: Technology and Operations Management (requred for all MBAs at HBS).](https://calebkwon.com/rctom_reviews)
-  - [Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)](https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0) accepted at the **Annals of Statistics**. 
+  - [Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)](https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0) *forthcoming* at the **Annals of Statistics**. 
 
