--- a/index.Rmd
+++ b/index.Rmd
@@ -65,7 +65,7 @@ output:
 
 # Caleb Kwon 
 
-I am a second year PhD student in Operations Management at Harvard University. My research interests are in Supply Chains, Retail Operations, and Econometrics. I am advised by Professor Ananth Raman. 
+I am a second year PhD student in Operations Management at Harvard University. My research interests are in Supply Chains, Retail Operations, and Econometrics. I am advised by Professor [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).  
 
 ## Some Links
 
