--- a/research.Rmd
+++ b/research.Rmd
@@ -31,7 +31,7 @@ output:
   
 3. Disclosure-Driven Social Engagement in Supply Chains (2021) with [Jun Li](https://sites.google.com/a/umich.edu/junli/) and [Andrew Di Wu](https://sites.google.com/site/diandrewwu/).
 
-      *Draft coming soon*
+      *Please e-mail for a copy*
       
 4. On the Dynamics of Retail Labor Productivity (2021) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
 
