--- a/research.Rmd
+++ b/research.Rmd
@@ -29,7 +29,7 @@ output:
     
       *Reject and Resubmit* 
   
-3. Disclosure-Driven Social Engagement in Supply Chains (2021) with [Jun Li](https://sites.google.com/a/umich.edu/junli/) and [Andrew Di Wu](https://sites.google.com/site/diandrewwu/).
+3. Disclosure-Driven Social Engagement in Supply Chains (2021) with [Andrew Di Wu](https://sites.google.com/site/diandrewwu/).
 
       *Please e-mail for a copy*
       
@@ -41,4 +41,4 @@ output:
 
 1. [Getting Started in R Cloud Studio (2021)](https://www.hbs.edu/faculty/Pages/item.aspx?num=59552) with [Chiara Farronato](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022).
 
-   **Harvard Business School Tutorial 621-708**
+   **Harvard Business School Tutorial 621-708 February, 2021**
