--- a/research.Rmd
+++ b/research.Rmd
@@ -33,7 +33,7 @@ output:
 
       *Please e-mail for a copy*
       
-4. On the Dynamics of Retail Labor Productivity (2021) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
+4. The Retail Labor Productivity Paradox (2021) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
 
 
 
