--- a/index.Rmd
+++ b/index.Rmd
@@ -70,7 +70,7 @@ I am a second year PhD student in the [Technology and Operations Management Unit
 ## Some Links
 
   - [HBS Profile](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1160260) 
-  - [CV/Resume](https://calebkwon.com/calebkwon_2021.pdf)
+  - [CV/Resume](https://calebkwon.com/CV.html)
   - [Google Scholar](https://scholar.google.com/citations?user=mBw3GmIAAAAJ)
 
 ## Some Recent Updates
