--- a/research.Rmd
+++ b/research.Rmd
@@ -30,8 +30,8 @@ output:
       *Reject and Resubmit* 
   
 3. Disclosure-Driven Social Engagement in Supply Chains (2021) with [Andrew Di Wu](https://sites.google.com/site/diandrewwu/).
-
-      *Please e-mail for a copy*
+    
+      **1st place in POMS College of Sustainable Operations: Best Student Paper Competition**
       
 4. The Retail Labor Productivity Paradox (2021) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
 
