--- a/index.Rmd
+++ b/index.Rmd
@@ -65,17 +65,11 @@ output:
 
 # Caleb Kwon 
 
-I am a second year PhD student in the [Technology and Operations Management Unit](https://www.hbs.edu/faculty/units/tom/Pages/default.aspx) within the Business School at Harvard University. My research interests are in Supply Chains, Retail Operations, and Econometrics. I am advised by Professor [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).  
+I'm a PhD student in the [Technology and Operations Management Unit](https://www.hbs.edu/faculty/units/tom/Pages/default.aspx) within the Business School at Harvard University. My research interests are in Supply Chains, Retail Operations, and Econometrics. I am advised by Professor [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).  
 
 ## Some Links
 
   - [HBS Profile](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1160260) 
   - [CV/Resume](https://calebkwon.com/CV.html)
   - [Google Scholar](https://scholar.google.com/citations?user=mBw3GmIAAAAJ)
-
-## Some Recent Updates
-  
-  - My paper, "Disclosure-Driven Social Engagement in Supply Chains" (2021) with [Andrew Di Wu](https://sites.google.com/site/diandrewwu/) won 1st place in POMS' College of Sustainable Operations: Best Student Paper Competition. 
-  - [Teaching evaluations for HBS Course: Technology and Operations Management (requred for all MBAs at HBS).](https://calebkwon.com/rctom_reviews)
-  - [Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2020)](https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0) *forthcoming* at the **Annals of Statistics**. 
 
