--- a/research.Rmd
+++ b/research.Rmd
@@ -31,7 +31,7 @@ output:
   
 3. Disclosure-Driven Social Engagement in Supply Chains (2021) with [Andrew Di Wu](https://sites.google.com/site/diandrewwu/).
     
-      **1st place in POMS College of Sustainable Operations: Best Student Paper Competition**
+      **[1st place in POMS College of Sustainable Operations: Best Student Paper Competition](https://poms.org/colleges/csustops/)**
       
 4. The Retail Labor Productivity Paradox (2021) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
 
