--- a/research.Rmd
+++ b/research.Rmd
@@ -25,7 +25,7 @@ output:
 
     *Forthcoming* at the  **Annals of Statistics** 
     
-2. [Supply Chain Disruptions and Causal Outcomes: Evidence from the Bankruptcy of Hanjin Shipping (2018) ](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272).
+2. [Supply Chain Disruptions and Causal Outcomes: Evidence from the Bankruptcy of Hanjin Shipping (2021) ](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272). [**NEW**]
     
       *Reject and Resubmit* 
   
